<resources>
    <string name="app_name">HeartBeat</string>

    <string name="loading">Loading...</string>

    <string name="LoginAct_btnLogin">Login</string>
    <string name="LoginAct_btnJoin">Join</string>

    <string name="joinAct_btnUsable">중복</string>
    <string name="joinAct_btnJoin">가입하기</string>
    <string name="joinAct_Title">JOIN</string>

    <string name="myDetailAct_Label">내 기기 설정</string>
    <string name="frDetailAct_Label">친구</string>
    <string name="setting_Label">설정</string>
    <string name="frRequestAct_Label">친구 신청</string>
    <string name="almListAct_Label">메시지종류 선택</string>

    <string name="msgList_friend_Label">친구요청메세지</string>
    <string name="msgList_voice_Label">음성메세지</string>
    <string name="msgList_emotion_Label">기분메세지</string>
    <string name="msgList_bzz_Label">진동메세지</string>

    <string name="addFriend">친구 신청</string>

    <string name="DetailAct_LEDColor">LED색 설정</string>
    <string name="DetailAct_BzzColor">진동색 지정</string>
    <string name="DetailAct_setMode">기분설정</string>
    <string name="DetailAct_transMode">기분전송</string>
    <string name="DetailAct_transBzz">진동전송</string>
    <string name="DetailAct_transVoice">음성메시지 전송</string>
    <string name="DetailAct_BzzFriend">버튼진동대상설정 </string>
    <string name="DetailAct_DeleteFriend">친구삭제</string>

    <string name="popup_ok_label">알림</string>
    <string name="popup_re_label">알림</string>
    <string name="popup_pickColor_label">색상 선택</string>
    <string name="popup_pickEmotion_label">기분 선택</string>
    <string name="popup_recordVoice_label">음성메세지 녹음</string>
    <string name="popup_msgFriend_label">친구요청</string>
    <string name="popup_msgVoice_label">음성 메세지</string>
    <string name="popup_msgEmotion_label">기분 메세지</string>
    <string name="popup_msgBzz_label">진동 메세지</string>


    <string name="LoginFailed">ID 혹은 PASSWORD가\n잘못되었습니다</string>
    <string name="joinSucces">회원가입 성공!</string>
    <string name="joinFaild">회원가입 실패!</string>
    <string name="requestEmotionSelect">기분을 선택해주세요</string>
    <string name="plzRecordFirst">먼저 녹음을 해주세요</string>
    <string name="NickSetSuccess">닉네임이 성공적으로\n변경되었습니다</string>
    <string name="addfr_notExistID">존재하지 않는 ID입니다</string>
    <string name="addfr_inputSelfID">자신에게는 친구요청을 할 수 없습니다</string>
    <string name="notInputID">ID를 입력해주세요</string>
    <string name="deleteFriend_Re">정말로 친구를\n삭제하시겠습니까?</string>
    <string name="msgfr_message">친구요청을\n수락하시겠습니까?</string>


    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="trans">전송</string>
    <string name="Request">요청</string>
    <string name="search">검색</string>
    <string name="accept">수락</string>
    <string name="deny">거절</string>
    <string name="play">재생</string>
    <string name="delete">삭제</string>

    <string name="input_id">친구의 ID를 입력해주세요</string>
    <string name="id">ID</string>
    <string name="nickname">닉네임</string>
    <string name="input_nick">닉네임을 입력해주세요</string>
    <string name="noNameFriend">알 수 없는 친구</string>

    <string name="msg_bzz_title">진동메세지</string>
    <string name="msg_emotion_title">기분메세지</string>
    <string name="msg_voice_title">음성메세지</string>
    <string name="msg_friend_title">친구요청</string>

    <string name="msg_content_friend">친구요청해요~</string>
    <string name="msg_content_bzz">진동</string>
    <string name="msg_content_voice">음성</string>

    <string name="msg_content_e_smile">기분좋아요</string>
    <string name="msg_content_e_laugh">즐거워요</string>
    <string name="msg_content_e_sad">엉엉엉</string>
    <string name="msg_content_e_annoy">기분이 안좋아요</string>
    <string name="msg_content_e_angry">저 화났어요</string>

    <string name="msg_content_e_wink">윙크!</string>
    <string name="msg_content_e_love">사랑해요</string>
    <string name="msg_content_e_wow">으앗</string>
    <string name="msg_content_e_overeat">토할것같아요...</string>
    <string name="msg_content_e_sleep">졸려....</string>

    <string name="bt_notSupport">해당 기기가 블루투스를 지원하지 않습니다</string>
    <string name="bt_notEnable">블루투스가 활성화되어있지 않습니다</string>
    <string name="bt_notConnect">블루투스가 연결되어있지 않습니다</string>

    <string name="sv_notConnect">서버와 연결할 수 없습니다</string>
    <string name="sv_waiting">서버로 요청중...</string>
    <string name="checking">확인중</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="no_member">존재하지 않는 회원입니다</string>
    <string name="no_friend">처리할 수 없는 메시지 입니다</string>
    <string name="send_ok">successed!</string>
    <string name="yes_friend">친구요청 가능합니다</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_btName">기기</string>
    <string name="setting_select_push">푸시알림</string>
    <string name="setting_select_BTbzz">기기진동수신</string>

    <string name="setting_push_no">알림 끔</string>
    <string name="setting_push_sound">소리만</string>
    <string name="setting_push_bzz">진동만</string>
    <string name="setting_push_both">소리+진동</string>

    <string name="setting_bzz_yes">수신</string>
    <string name="setting_bzz_no">해제</string>

</resources>
