<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comjungwon7769heartbeat.github.heartbeat.AlaramListActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding1"
            android:drawableLeft="@mipmap/ic_friend_add"
            android:layout_weight="1"
            android:backgroundTint="@color/color1"
            android:text="@string/msg_friend_title"
            android:textColor="@color/colorLight"
            android:textSize="25dp"
            android:id="@+id/almList_btnFriend"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding1"
            android:drawableLeft="@mipmap/ic_sound"
            android:layout_weight="1"
            android:backgroundTint="@color/color2"
            android:text="@string/msg_voice_title"
            android:textColor="@color/colorLight"
            android:textSize="25dp"
            android:id="@+id/almList_btnVoice"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding1"
            android:drawableLeft="@mipmap/ic_emotion"
            android:layout_weight="1"
            android:backgroundTint="@color/color3"
            android:text="@string/msg_emotion_title"
            android:textColor="@color/colorLight"
            android:textSize="25dp"
            android:id="@+id/almList_btnEmotion"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding1"
            android:drawableLeft="@mipmap/ic_bzz"
            android:layout_weight="1"
            android:backgroundTint="@color/color4"
            android:text="@string/msg_bzz_title"
            android:textColor="@color/colorLight"
            android:textSize="25dp"
            android:id="@+id/almList_btnBzz"/>

    </LinearLayout>
</RelativeLayout>
