<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".AlaramListFragment">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".AlaramListFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/almList_btnFriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_button_1"
                android:drawableLeft="@drawable/ic_person_add_white_50dp"
                android:drawableRight="@drawable/ic_chevron_right_white_24dp"
                android:padding="@dimen/padding1"
                android:text="@string/msg_friend_title"
                android:textColor="@color/colorLight"
                android:textSize="25dp"/>

            <Button
                android:id="@+id/almList_btnVoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_button_2"
                android:drawableLeft="@drawable/ic_mic_white_50dp"
                android:drawableRight="@drawable/ic_chevron_right_white_24dp"
                android:padding="@dimen/padding1"
                android:text="@string/msg_voice_title"
                android:textColor="@color/colorLight"
                android:textSize="25dp"/>

            <Button
                android:id="@+id/almList_btnEmotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_button_3"
                android:drawableLeft="@drawable/ic_mood_white_50dp"
                android:drawableRight="@drawable/ic_chevron_right_white_24dp"
                android:padding="@dimen/padding1"
                android:text="@string/msg_emotion_title"
                android:textColor="@color/colorLight"
                android:textSize="25dp"/>


            <Button
                android:id="@+id/almList_btnBzz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_button_4"
                android:drawableLeft="@drawable/ic_vibration_white_50dp"
                android:drawableRight="@drawable/ic_chevron_right_white_24dp"
                android:padding="@dimen/padding1"
                android:text="@string/msg_bzz_title"
                android:textColor="@color/colorLight"
                android:textSize="25dp"/>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>