<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comjungwon7769heartbeat.github.heartbeat.FriendDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:padding="20dp"
        android:id="@+id/relativeLayout">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/frDt_imgMode"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/laugh"
            android:background="#f2b8a1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="hj"
            android:id="@+id/frDt_txtNick"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/frDt_imgMode"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="hjjjong"
            android:id="@+id/frDt_txtID"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <Button
                android:drawableLeft="@drawable/ic_wb_sunny_white_50dp"
                android:paddingLeft="@dimen/button_padding"
                android:drawablePadding="30dp"
                android:textAlignment="textStart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_Button_Size"
                android:background="@drawable/selector_button_1"
                android:textColor="@color/colorLight"
                android:id="@+id/frDt_btnBzzColor"
                android:text="@string/DetailAct_BzzColor"
                />
            <Button
                android:drawableLeft="@drawable/ic_mood_white_50dp"
                android:paddingLeft="@dimen/button_padding"
                android:drawablePadding="30dp"
                android:textAlignment="textStart"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_Button_Size"
                android:background="@drawable/selector_button_2"
                android:textColor="@color/colorLight"
                android:id="@+id/frDt_btnTransEmotion"
                android:text="@string/DetailAct_transMode"/>
            <Button
                android:drawableLeft="@drawable/ic_vibration_white_50dp"
                android:paddingLeft="@dimen/button_padding"
                android:drawablePadding="30dp"
                android:textAlignment="textStart"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_Button_Size"
                android:background="@drawable/selector_button_3"
                android:textColor="@color/colorLight"
                android:id="@+id/frDt_btnTransBzz"
                android:text="@string/DetailAct_transBzz"/>

            <Button
                android:drawableLeft="@drawable/ic_mic_white_50dp"
                android:paddingLeft="@dimen/button_padding"
                android:drawablePadding="30dp"
                android:textAlignment="textStart"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_Button_Size"
                android:background="@drawable/selector_button_4"
                android:textColor="@color/colorLight"
                android:id="@+id/frDt_btnTransVoice"
                android:text="@string/DetailAct_transVoice"/>
            <Button
                android:drawableLeft="@drawable/ic_person_white_50dp"
                android:paddingLeft="@dimen/button_padding"
                android:drawablePadding="30dp"
                android:textAlignment="textStart"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_Button_Size"
                android:background="@drawable/selector_button_5"
                android:textColor="@color/colorLight"
                android:id="@+id/frDt_btnDeleteFriend"
                android:text="@string/DetailAct_DeleteFriend"/>

            <Button
                android:drawableLeft="@drawable/ic_favorite_white_50dp"
                android:paddingLeft="@dimen/button_padding"
                android:drawablePadding="30dp"
                android:textAlignment="textStart"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_Button_Size"
                android:background="@drawable/selector_button_6"
                android:textColor="@color/colorLight"
                android:id="@+id/frDt_btnBzzFriend"
                android:text="@string/DetailAct_BzzFriend"/>
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/frDt_btnMsg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/fab_margin"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_mail_outline_white_50dp"/>


</RelativeLayout>
