<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/popup_msgfr_imgMode"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                android:src="@drawable/smile"/>

            <TextView
                android:id="@+id/popup_msgfr_txtId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="sender"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorLight"
                android:textSize="25dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/msgfr_message"
            android:textColor="@color/colorLight"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/popup_msgfr_btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/selector_button_bgdark"
                android:text="@string/accept"
                android:textColor="@drawable/selector_button_bgdark"/>

            <Button
                android:id="@+id/popup_msgfr_btnDeny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/selector_button_bgdark"
                android:text="@string/deny"
                android:textColor="@drawable/selector_button_bgdark"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>